<resources>
    <string name="app_name">Facebook</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email_input">Email</string>
    <string name="password_input">Password</string>
    <string name="name_input">Full Name</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="link_register">Not a member? Sign up now.</string>
    <string name="link_login">Already registered! Login Me.</string>
    <string name="btn_confirm">CONFIRM</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="msg_prompt_remove_friend">Are you sure you want remove #name# as your friend?</string>
    <string name="txt_comment_hint">Write a comment...</string>
    <string name="btn_find_friends">Find Friends</string>
    <string name="btn_skip">skip</string>
    <string name="btn_upload_profile">Upload a photo</string>
    <string name="lbl_your_current_profile">Your current profile picture is always public</string>
    <string name="menu_btn_post">post</string>
    <string name="btn_comment_lbl">Comment</string>
    <string name="btn_like_lbl">Like</string>
    <string name="lbl_now_your_friends">You are now friends</string>
    <string name="lbl_no_requests">No New Requests</string>
    <string name="lbl_no_friends">No friends to show</string>
    <string name="lbl_no_suggestion">No suggestions to show</string>
    <string name="lbl_no_notifications">No notifications</string>
    <string name="lbl_no_comments">No Comments Yet</string>
    <string name="btn_un_friend">Remove</string>
    <string name="account_type">com.satish.facebook.account</string>
    <string name="authority">com.satish.facebook.account.provider</string>
    <string name="auth_token_type">User Access</string>
    <string name="logout_message">You\'ve been signed out. Please sign in again!</string>
    <string name="error_no_google_account">Your device doesn\'t have google account connected. Please add a google account in Settings and try again!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
